tdf#146490 SwNavigator: don't show fields that are in header footer area

Fields that are in the header footer area don't behave well when
included in the Navigators fields members list. This patch make it so
they are are not included.

Change-Id: I99be944a08a9177676098f30d47ba56dea2b7441